--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 certifi==2018.4.16
 chardet==3.0.4
 cycler==0.10.0
+dj-database-url==0.5.0
 Django==2.1
 idna==2.7
 Jinja2==2.10
@@ -11,8 +12,11 @@ numpy==1.15.0
 psycopg2==2.7.5
 pyparsing==2.2.0
 python-dateutil==2.7.3
+python-decouple==3.1
 pytz==2018.5
 requests==2.19.1
+scikit-learn==0.19.2
+scipy==1.1.0
 six==1.11.0
 urllib3==1.23
 whitenoise==3.3.1
